--- a/style.css
+++ b/style.css
@@ -26,3 +26,10 @@
 .Success{
     margin-left: 110px;
 }
+.text-white{
+    text-align: center;
+}
+.foot{
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
