--- a/style.css
+++ b/style.css
@@ -48,3 +48,8 @@
         display: none;
     }    
 }
+@media screen and (max-width: 991px){
+    .Register{
+        text-align: center;
+    }
+}
